Fix task show double border

--- a/client/public/stylesheets/scss/_task.scss
+++ b/client/public/stylesheets/scss/_task.scss
@@ -39,6 +39,9 @@ body {
 
 #task-index-list {
   padding-bottom: 0px;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
 }
 
 .task-create-container,
